--- a/app/src/main/res/layout/activity_game_create.xml
+++ b/app/src/main/res/layout/activity_game_create.xml
@@ -51,13 +51,13 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="68dp"
-        android:layout_marginBottom="12dp"
+        android:layout_marginBottom="4dp"
         android:text="Enter the region"
         app:layout_constraintBottom_toTopOf="@+id/key_region"
         app:layout_constraintStart_toStartOf="parent" />
 
     <EditText
-        android:id="@+id/editTextTextPersonName3"
+        android:id="@+id/descript_key"
         android:layout_width="227dp"
         android:layout_height="38dp"
         android:layout_marginStart="66dp"
@@ -66,22 +66,22 @@
         android:hint="Description"
         android:inputType="textPersonName"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView6" />
+        app:layout_constraintTop_toBottomOf="@+id/descript" />
 
     <TextView
-        android:id="@+id/textView6"
+        android:id="@+id/descript"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="66dp"
         android:layout_marginTop="12dp"
         android:layout_marginBottom="12dp"
         android:text="Description"
-        app:layout_constraintBottom_toTopOf="@+id/editTextTextPersonName3"
+        app:layout_constraintBottom_toTopOf="@+id/descript_key"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/key_region" />
 
     <EditText
-        android:id="@+id/editTextTextPersonName4"
+        android:id="@+id/min_tm_key"
         android:layout_width="230dp"
         android:layout_height="39dp"
         android:layout_marginStart="66dp"
@@ -90,21 +90,21 @@
         android:ems="10"
         android:hint="Min Teams"
         android:inputType="textPersonName"
-        app:layout_constraintBottom_toTopOf="@+id/textView8"
+        app:layout_constraintBottom_toTopOf="@+id/max_tm"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
 
     <TextView
-        android:id="@+id/textView7"
+        android:id="@+id/min_key"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="66dp"
         android:layout_marginTop="12dp"
         android:layout_marginBottom="12dp"
         android:text="Min Teams"
-        app:layout_constraintBottom_toTopOf="@+id/editTextTextPersonName4"
+        app:layout_constraintBottom_toTopOf="@+id/min_tm_key"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName3" />
+        app:layout_constraintTop_toBottomOf="@+id/descript_key" />
 
     <EditText
         android:id="@+id/editTextTextPersonName5"
@@ -121,7 +121,7 @@
         app:layout_constraintStart_toStartOf="parent" />
 
     <TextView
-        android:id="@+id/textView8"
+        android:id="@+id/max_tm"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="66dp"
@@ -147,7 +147,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="68dp"
-        android:layout_marginBottom="201dp"
+        android:layout_marginBottom="76dp"
         app:layout_constraintBottom_toTopOf="@+id/toolbar2"
         app:layout_constraintStart_toStartOf="parent"
         tools:text="Add image" />
@@ -168,7 +168,7 @@
         android:id="@+id/textView10"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="66dp"
+        android:layout_marginStart="68dp"
         android:layout_marginBottom="12dp"
         android:text="Enter the name"
         app:layout_constraintBottom_toTopOf="@+id/editTextTextPersonName"
@@ -178,8 +178,8 @@
         android:id="@+id/button2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="66dp"
-        android:layout_marginBottom="94dp"
+        android:layout_marginStart="68dp"
+        android:layout_marginBottom="16dp"
         android:text="Submit"
         app:layout_constraintBottom_toTopOf="@+id/toolbar2"
         app:layout_constraintStart_toStartOf="parent" />
