--- a/app/src/main/res/layout/activity_game_update.xml
+++ b/app/src/main/res/layout/activity_game_update.xml
@@ -7,6 +7,21 @@
     android:layout_height="match_parent"
     tools:context=".game_update">
 
+    <EditText
+        android:id="@+id/editTextTextPersonName8"
+        android:layout_width="227dp"
+        android:layout_height="38dp"
+        android:layout_marginStart="66dp"
+        android:layout_marginEnd="100dp"
+        android:layout_marginBottom="12dp"
+        android:ems="10"
+        android:hint="Name"
+        android:inputType="textPersonName"
+        app:layout_constraintBottom_toTopOf="@+id/textView5"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent" />
+
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/toolbar2"
         android:layout_width="394dp"
@@ -38,8 +53,8 @@
         android:id="@+id/key_region"
         android:layout_width="229dp"
         android:layout_height="38dp"
-        android:layout_marginStart="66dp"
-        android:layout_marginTop="12dp"
+        android:layout_marginStart="68dp"
+        android:layout_marginTop="356dp"
         android:ems="10"
         android:hint="@string/key_region"
         android:inputType="textPersonName"
@@ -57,7 +72,7 @@
         app:layout_constraintStart_toStartOf="parent" />
 
     <EditText
-        android:id="@+id/editTextTextPersonName3"
+        android:id="@+id/descript_key"
         android:layout_width="227dp"
         android:layout_height="38dp"
         android:layout_marginStart="66dp"
@@ -66,22 +81,22 @@
         android:hint="Description"
         android:inputType="textPersonName"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView6" />
+        app:layout_constraintTop_toBottomOf="@+id/descript" />
 
     <TextView
-        android:id="@+id/textView6"
+        android:id="@+id/descript"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="66dp"
         android:layout_marginTop="12dp"
         android:layout_marginBottom="12dp"
         android:text="Description"
-        app:layout_constraintBottom_toTopOf="@+id/editTextTextPersonName3"
+        app:layout_constraintBottom_toTopOf="@+id/descript_key"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/key_region" />
 
     <EditText
-        android:id="@+id/editTextTextPersonName4"
+        android:id="@+id/min_tm_key"
         android:layout_width="230dp"
         android:layout_height="39dp"
         android:layout_marginStart="66dp"
@@ -90,21 +105,22 @@
         android:ems="10"
         android:hint="Min Teams"
         android:inputType="textPersonName"
-        app:layout_constraintBottom_toTopOf="@+id/textView8"
+        app:layout_constraintBottom_toTopOf="@+id/max_tm"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent" />
 
     <TextView
-        android:id="@+id/textView7"
+        android:id="@+id/min_key"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="66dp"
         android:layout_marginTop="12dp"
         android:layout_marginBottom="12dp"
         android:text="Min Teams"
-        app:layout_constraintBottom_toTopOf="@+id/editTextTextPersonName4"
+        app:layout_constraintBottom_toTopOf="@+id/min_tm_key"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName3" />
+        app:layout_constraintTop_toBottomOf="@+id/descript_key" />
 
     <EditText
         android:id="@+id/editTextTextPersonName5"
@@ -112,16 +128,16 @@
         android:layout_height="39dp"
         android:layout_marginStart="66dp"
         android:layout_marginEnd="91dp"
-        android:layout_marginBottom="12dp"
         android:ems="10"
         android:hint="Max Teams"
         android:inputType="textPersonName"
-        app:layout_constraintBottom_toTopOf="@+id/textView9"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintHorizontal_bias="0.111"
+        app:layout_constraintStart_toStartOf="parent"
+        tools:layout_editor_absoluteY="413dp" />
 
     <TextView
-        android:id="@+id/textView8"
+        android:id="@+id/max_tm"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="66dp"
@@ -131,36 +147,15 @@
         app:layout_constraintStart_toStartOf="parent" />
 
     <TextView
-        android:id="@+id/textView9"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="66dp"
-        android:layout_marginEnd="215dp"
-        android:layout_marginBottom="12dp"
-        android:text="Upload the image"
-        app:layout_constraintBottom_toTopOf="@+id/button"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
-
-    <Button
-        android:id="@+id/button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="68dp"
-        android:layout_marginBottom="201dp"
-        app:layout_constraintBottom_toTopOf="@+id/toolbar2"
-        app:layout_constraintStart_toStartOf="parent"
-        tools:text="Add image" />
-
-    <TextView
         android:id="@+id/create_heading"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="66dp"
-        android:layout_marginTop="31dp"
+        android:layout_marginTop="16dp"
         android:layout_marginEnd="286dp"
         android:text="Update"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -179,15 +174,41 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Update"
-        tools:layout_editor_absoluteX="68dp"
-        tools:layout_editor_absoluteY="623dp" />
+        tools:layout_editor_absoluteX="66dp"
+        tools:layout_editor_absoluteY="475dp" />
 
     <Button
         android:id="@+id/cancle_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Cancle"
-        tools:layout_editor_absoluteX="217dp"
-        tools:layout_editor_absoluteY="623dp" />
+        tools:layout_editor_absoluteX="230dp"
+        tools:layout_editor_absoluteY="474dp" />
+
+    <TextView
+        android:id="@+id/enter_name_id"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Enter the name of the game"
+        tools:layout_editor_absoluteX="68dp"
+        tools:layout_editor_absoluteY="44dp" />
+
+    <TextView
+        android:id="@+id/enter_region"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Enter the region"
+        tools:layout_editor_absoluteX="68dp"
+        tools:layout_editor_absoluteY="135dp" />
+
+    <EditText
+        android:id="@+id/editTextTextPersonName11"
+        android:layout_width="234dp"
+        android:layout_height="40dp"
+        android:ems="10"
+        android:hint="@string/game_name"
+        android:inputType="textPersonName"
+        tools:layout_editor_absoluteX="66dp"
+        tools:layout_editor_absoluteY="77dp" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
