--- a/app/src/main/res/layout/activity_tournament_org_list.xml
+++ b/app/src/main/res/layout/activity_tournament_org_list.xml
@@ -31,7 +31,7 @@
         app:layout_constraintTop_toBottomOf="@+id/cr_tournamet_topic3" />
 
     <TextView
-        android:id="@+id/textView7"
+        android:id="@+id/min_key"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="244dp"
