--- a/app/src/main/res/layout/activity_game_home.xml
+++ b/app/src/main/res/layout/activity_game_home.xml
@@ -107,12 +107,12 @@ tools:context=".activity_game_home">
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="40dp"
-        app:layout_constraintTop_toBottomOf="@+id/textView7"
+        app:layout_constraintTop_toBottomOf="@+id/add_new_match"
         tools:layout_editor_absoluteX="144dp"
         tools:srcCompat="@tools:sample/avatars" />
 
     <TextView
-        android:id="@+id/textView7"
+        android:id="@+id/add_new_match"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="12dp"
@@ -122,7 +122,7 @@ tools:context=".activity_game_home">
         app:layout_constraintTop_toBottomOf="@+id/imageView" />
 
     <TextView
-        android:id="@+id/textView8"
+        android:id="@+id/t_round"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
