--- a/app/src/main/res/layout/activity_tournament_org_list.xml
+++ b/app/src/main/res/layout/activity_tournament_org_list.xml
@@ -8,7 +8,7 @@
 
 
     <TextView
-        android:id="@+id/textView7"
+        android:id="@+id/add_new_match"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="266dp"
@@ -19,7 +19,7 @@
         app:layout_constraintTop_toBottomOf="@+id/floatingActionButton" />
 
     <TextView
-        android:id="@+id/textView14"
+        android:id="@+id/match_org_list_h_round1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="28dp"
@@ -27,11 +27,11 @@
         android:text="Added Tournaments"
         android:textSize="12sp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/cr_tournamet_topic2" />
+        app:layout_constraintTop_toBottomOf="@+id/match_org_list_h_matches" />
 
 
     <TextView
-        android:id="@+id/cr_tournamet_topic2"
+        android:id="@+id/match_org_list_h_matches"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
