--- a/app/src/main/res/layout/activity_tournament_update.xml
+++ b/app/src/main/res/layout/activity_tournament_update.xml
@@ -31,7 +31,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <Button
-        android:id="@+id/button"
+        android:id="@+id/Btn_create"
         android:layout_width="103dp"
         android:layout_height="44dp"
         android:layout_marginStart="52dp"
@@ -42,7 +42,7 @@
         app:layout_constraintTop_toBottomOf="@+id/textView13" />
 
     <TextView
-        android:id="@+id/textView9"
+        android:id="@+id/t_bracket"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="52dp"
@@ -53,7 +53,7 @@
         app:layout_constraintTop_toBottomOf="@+id/cr_tournamet_topic" />
 
     <TextView
-        android:id="@+id/textView10"
+        android:id="@+id/t_teamA"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="52dp"
@@ -108,7 +108,7 @@
         android:inputType="textPersonName"
         android:textSize="12sp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView9" />
+        app:layout_constraintTop_toBottomOf="@+id/t_bracket" />
 
     <EditText
         android:id="@+id/editTextTextPersonName2"
@@ -121,7 +121,7 @@
         android:inputType="textPersonName"
         android:textSize="12sp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView9" />
+        app:layout_constraintTop_toBottomOf="@+id/t_bracket" />
 
     <EditText
         android:id="@+id/editTextDate"
@@ -163,7 +163,7 @@
         app:layout_constraintTop_toBottomOf="@+id/textView13" />
 
     <Button
-        android:id="@+id/button4"
+        android:id="@+id/Btn_cancel"
         android:layout_width="103dp"
         android:layout_height="44dp"
         android:layout_marginStart="260dp"
