--- a/app/src/main/res/layout/activity_tournament_create.xml
+++ b/app/src/main/res/layout/activity_tournament_create.xml
@@ -14,7 +14,7 @@
         android:layout_marginStart="52dp"
         android:layout_marginTop="96dp"
         android:backgroundTint="@color/grey"
-        android:text="CREATE"
+        android:text="@string/create"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView13" />
 
@@ -24,7 +24,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="52dp"
         android:layout_marginTop="96dp"
-        android:text="Tournament Name :"
+        android:text="@string/tournament_name1"
         android:textSize="12sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/cr_tournamet_topic" />
@@ -35,7 +35,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="52dp"
         android:layout_marginTop="176dp"
-        android:text="Tournament Type :"
+        android:text="@string/tournament_type_1"
         android:textSize="12sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/cr_tournamet_topic" />
@@ -46,7 +46,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="252dp"
         android:layout_marginTop="176dp"
-        android:text="Max Teams : "
+        android:text="@string/max_teams_1"
         android:textSize="12sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/cr_tournamet_topic" />
@@ -57,7 +57,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="52dp"
         android:layout_marginTop="264dp"
-        android:text="Select Date and Time :"
+        android:text="@string/select_date_and_time"
         android:textSize="12sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/cr_tournamet_topic" />
@@ -68,7 +68,7 @@
         android:layout_height="25dp"
         android:layout_marginStart="52dp"
         android:layout_marginTop="372dp"
-        android:text="Tournament Background  Image : "
+        android:text="@string/tournament_background_image"
         android:textSize="12sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/cr_tournamet_topic" />
@@ -80,7 +80,7 @@
         android:layout_marginStart="16dp"
         android:layout_marginTop="24dp"
         android:fontFamily="sans-serif"
-        android:text="Create Tournament"
+        android:text="@string/tournament_create"
         android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -91,7 +91,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="52dp"
         android:layout_marginTop="20dp"
-        android:text="Select Game :"
+        android:text="@string/select_game"
         android:textSize="12sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/cr_tournamet_topic" />
@@ -155,7 +155,7 @@
         android:layout_marginStart="64dp"
         android:layout_marginTop="12dp"
         android:backgroundTint="@color/light_grey"
-        android:text="Browse"
+        android:text="@string/browse"
         android:textSize="12sp"
         app:iconTint="#424242"
         app:layout_constraintStart_toStartOf="parent"
@@ -168,7 +168,7 @@
         android:layout_marginStart="260dp"
         android:layout_marginTop="96dp"
         android:backgroundTint="@color/white"
-        android:text="Cancel"
+        android:text="@string/cancel"
         android:textColor="@color/black"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView13" />
